--- a/src/components/notFound/NotFound.css
+++ b/src/components/notFound/NotFound.css
@@ -1,3 +1,8 @@
 .image-not-found {
-    background: url("./src/images/404-not-found.gif");
+    background-image: url("../../images/404-not-found.gif");
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 500px;
+    width: 500px;
+    margin: 20%;
 }
